<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ViewNote">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="@dimen/cardview_compat_inset_shadow"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/note_title" />

            <TextView
                android:id="@+id/textDateView"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:text="@string/date_created" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textNoteView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_desc"
        android:layout_margin="10dp"
        android:textSize="25sp"/>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
        android:layout_margin="10dp"
    android:orientation="horizontal">
    <Button
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/edit"
       android:onClick="editNote"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        tools:ignore="ButtonStyle" />
    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
       android:onClick="backNote"
        android:layout_marginLeft="25dp"
        android:text="@string/back"
        android:layout_marginStart="25dp"
        tools:ignore="ButtonStyle" />
</LinearLayout>
</LinearLayout>

</ScrollView>