<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NoteCreated">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_title"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/note_title"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="5"
        android:minLines="4"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/addNotes" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/addNotes"
        android:inputType="textMultiLine"
        android:lines="10"
        android:maxLines="50"
        android:minLines="15"
        tools:ignore="LabelFor" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/save"
            android:onClick="saveNote"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:onClick="cancelNote"
            android:layout_marginLeft="25dp"
            android:text="@string/cancel"
            android:layout_marginStart="25dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>